criei a primeira tela
ainda preciso testar pra ver se tá funcionando direitinho

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Jords Store</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/index.css">
@@ -16,16 +21,33 @@
     <div class="index_container">
         <div class="elements">
             <div class="logo_container">
-                <img class="logo" src="#" alt="logo">
+                <img class="logo" src="./assets/logo.png" alt="logo">
             </div>
             <div class="elements_container">
                 <div class="social_media">
-                    <div class="instagram"></div>
-                    <div class="whatsapp"></div>
+                    <a onclick ="abrirInsta()" href="#" class="instagram" style="text-align: center;">
+                        <img style="margin-top:10px" width="30px" src="./assets/instagram.svg" alt="instagram">
+                    </a>
+                    <div class="whatsapp" style="text-align: center;">
+                        <img style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
+                    </div>
+                    <div class="tiktok" style="text-align: center;">
+                        <img style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
+                    </div>
+                </div>
+                <span class="falinha">sua loja oficial de camisas de time!</span>
+                <div class="btn_container" onclick="acessarLoja();">
+                    <div class="btn">
+                        <span class="btn_content">acesse!</span>
+                    </div>
+                    <div class="btn_shadow">
+                        <span class="btn_shadow_content">acesse!</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="./scripts/btn.js"></script>
 </body>
 
 </html>
