1ª tela - segunda att

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 <body>
     <div class="index_container">
         <div class="elements">
+            <div class="top_area"></div>
             <div class="logo_container">
                 <img class="logo" src="./assets/logo.png" alt="logo">
             </div>
