consertando o bug de resolução
a página inicial ficou bala

--- a/public/index.html
+++ b/public/index.html
@@ -20,29 +20,31 @@
 <body>
     <div class="index_container">
         <div class="elements">
-            <div class="top_area"></div>
-            <div class="logo_container">
-                <img class="logo" src="./assets/logo.png" alt="logo">
-            </div>
-            <div class="elements_container">
-                <div class="social_media">
-                    <a onclick ="abrirInsta()" href="#" class="instagram" style="text-align: center;">
-                        <img style="margin-top:10px" width="30px" src="./assets/instagram.svg" alt="instagram">
-                    </a>
-                    <div class="whatsapp" style="text-align: center;">
-                        <img style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
-                    </div>
-                    <div class="tiktok" style="text-align: center;">
-                        <img style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
-                    </div>
+            <div class="position_container">
+                <div class="top_area"></div>
+                <div class="logo_container">
+                    <img class="logo" src="./assets/logo.png" alt="logo">
                 </div>
-                <span class="falinha">sua loja oficial de camisas de time!</span>
-                <div class="btn_container" onclick="acessarLoja();">
-                    <div class="btn">
-                        <span class="btn_content">acesse!</span>
+                <div class="elements_container">
+                    <div class="social_media">
+                        <a onclick="abrirInsta()" href="#" class="instagram" style="text-align: center;">
+                            <img style="margin-top:10px" width="30px" src="./assets/instagram.svg" alt="instagram">
+                        </a>
+                        <div class="whatsapp" style="text-align: center;">
+                            <img style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
+                        </div>
+                        <div class="tiktok" style="text-align: center;">
+                            <img style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
+                        </div>
                     </div>
-                    <div class="btn_shadow">
-                        <span class="btn_shadow_content">acesse!</span>
+                    <span class="falinha">sua loja oficial de camisas de time!</span>
+                    <div class="btn_container" onclick="acessarLoja();">
+                        <div class="btn">
+                            <span class="btn_content">acesse!</span>
+                        </div>
+                        <div class="btn_shadow">
+                            <span class="btn_shadow_content">acesse!</span>
+                        </div>
                     </div>
                 </div>
             </div>
