página 1 está quase finalizada

--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,14 @@
                 <div class="elements_container">
                     <div class="social_media">
                         <a onclick="abrirInsta()" href="#" class="instagram" style="text-align: center;">
-                            <img style="margin-top:10px" width="30px" src="./assets/instagram.svg" alt="instagram">
+                            <img class="instagram_img" style="margin-top:10px" width="30px" src="./assets/instagram.svg" alt="instagram">
                         </a>
-                        <div class="whatsapp" style="text-align: center;">
-                            <img style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
-                        </div>
-                        <div class="tiktok" style="text-align: center;">
-                            <img style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
-                        </div>
+                        <a href="#" class="whatsapp" style="text-align: center;">
+                            <img class="whatsapp_img" style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
+                        </a>
+                        <a href="#" class="tiktok" style="text-align: center;">
+                            <img class="tiktok_img" style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
+                        </a>
                     </div>
                     <span class="falinha">sua loja oficial de camisas de time!</span>
                     <div class="btn_container" onclick="acessarLoja();">
