add window.open para o tiktok

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                         <a href="#" class="whatsapp" style="text-align: center;">
                             <img class="whatsapp_img" style="margin-top:10px" width="30px" src="./assets/whatsapp.svg" alt="whatsapp">
                         </a>
-                        <a href="https://www.tiktok.com/@jordssports?" class="tiktok" style="text-align: center;">
+                        <a href="#" onclick="window.open('https://www.tiktok.com/@jordssports?');" class="tiktok" style="text-align: center;">
                             <img class="tiktok_img" style="margin-top:10px" width="30px" src="./assets/tiktok.svg" alt="tiktok">
                         </a>
                     </div>
