erro de diretório
tentando resolver um erro nos diretórios dos arquivos .css e .js

--- a/public/crud/index.html
+++ b/public/crud/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD</title>
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="./crud/styles/reset.css">
+    <link rel="stylesheet" href="./crud/styles/general.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -46,9 +46,9 @@
         </div>
         <a id="send" onclick="sendForm()" href="#">enviar</a>
     </div>
-    <script src="./scripts/geral.js"></script>
-    <script src="./scripts/image.js"></script>
-    <script src="./scripts/estoque.js"></script>
+    <script src="./crud/scripts/geral.js"></script>
+    <script src="./crud/scripts/image.js"></script>
+    <script src="./crud/scripts/estoque.js"></script>
 </body>
 
 </html>
